src/test/ui/macros/macro-name-typo.stderr
error: cannot find macro `printlx` in this scope
  --> $DIR/macro-name-typo.rs:2:5
   |
LL |     printlx!("oh noes!");
   |     ^^^^^^^ help: did you mean `println`? (a similarly named macro)
   |
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
LL | macro_rules! println {
   | -------------------- similarly named macro `println` defined here

error: aborting due to previous error

